add code via vscode

--- a/HelloWorld_Codespace.ipynb
+++ b/HelloWorld_Codespace.ipynb
@@ -17,6 +17,16 @@
    "source": [
     "print('Codespaces is cool!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e8f33dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('This line is done in vscode')"
+   ]
   }
  ],
  "metadata": {
